# renode-mc-experiments

./: .gitignore  README.md
dual-core-cortex-m3/: Cargo.toml  memory.x
dual-core-cortex-m3/core1/: Cargo.toml  openocd.gdb
dual-core-cortex-m3/core1/src/: main.rs
dual-core-cortex-m3/core2/: Cargo.toml  README.md
dual-core-cortex-m3/core2/src/: main.rs
dual-core-cortex-m3/renode/: dualcore-stm32f103.repl  renode-config.resc  run.sh
rust-bluepill-example/: Cargo.toml
rust-bluepill-example/.cargo/: config
rust-bluepill-example/renode/: renode-config.resc  run.sh
rust-bluepill-example/src/: main.rs
