[package]
name = "rust-bluepill-example"
edition = "2021"

[[bin]]
name = "rust-bluepill-example"
test = false
bench = false

[dependencies]
cortex-m-semihosting = "0.3.2"
cortex-m = "0.5.8"
nb = "0.1.1"
# embedded-hal = "1.0.0"
embedded-hal = { version = "1.0.0" }
panic-halt = "0.2.0"
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt"]}
cortex-m-rt = "0.7.3"

# stm32f1 = "0.15.1"
# embedded-dma = "0.2.0"
# bxcan = "0.7"
# void = { default-features = false, version = "1.0.2" }
# fugit = "0.3.6"
# fugit-timer = "0.1.3"
# rtic-monotonic = { version = "1.0", optional = true }
# bitflags = "1.3.2"

